
o UPDATE: `net.scores` is much simpler (internally) and quicker; seamlessly integrates with `net.loads`

o UPDATE: `compare.EGA.plots` is faster, more flexible, and more reliable for comparing two or more plots

o UPDATE: `hierEGA` is faster and has new S3 methods

o UPDATE: S3 plotting for `invariance`

o DEPENDENCY: removed {network} because it is no longer used for plotting; switched {sna} to IMPORTS rather than SUGGESTS

o DEPENDENCY: removed {rstudioapi} from 'Suggests' because it was used in `colortext` and used in the package

o DEPENDENCY: removed {matrixcalc} because it was only used for trace of a matrix (own internal function is used)

o DEPENDENCY: {future} and {future.apply} are used for parallelization (better integration); includes internal function to check for available memory to not break in big data cases

o DEPENDENCY: {progress} and {progressr} are used for progress bars (in parallelization)

o DEPENDENCY: removed {psychTools} from 'Suggests' which was only used in examples

o DEPENDENCY: removed {rmarkdown} from 'Suggests' since it wasn't being used across the package


Changes in version 1.2.5.1

o FIX: cross-loading bug in `net.loads` was leading to problems when there were negative cross-loadings

o FIX: added `psych::factor.scores` scoring methods in `net.scores`

o ADD: `signed.louvain` to estimate the Signed Louvain algorithm (implemented in C)


Changes in version 1.2.5

o ADD: `most_common_tefi` method for `EGA` analyses


Changes in version 1.2.4

o REMOVE: `residualEGA` has been removed in favor of `riEGA` (removes {OpenMx} dependency)

o ADD: rotations to `net.loads` and `net.scores`

o UPDATE: `hierEGA` only outputs specified output (no longer outputs all possible consensus methods and scores combinations -- should be much faster)


Changes in version 1.2.3

o FIX: many bug fixes related to latest update; functions have largely returned to stable status

o UPDATE: Mac and Linux parallelizations have been optimized
