@@ -94,6 +94,8 @@ o UPDATE: `hierEGA` is faster and has new S3 methods
 
 o UPDATE: S3 plotting for `invariance`
 
+o UPDATE: `hierEGA` + `bootEGA` integration for `itemStability` and `dimensionStability` (includes full S3 methods)
+
 o DEPENDENCY: removed {network} because it is no longer used for plotting; switched {sna} to IMPORTS rather than SUGGESTS
 
 o DEPENDENCY: removed {rstudioapi} from 'Suggests' because it was used in `colortext` and used in the package
